RESOLVED FIXED148707
AX: WebKit does not expose max/min value of <progress> element
https://bugs.webkit.org/show_bug.cgi?id=148707
Summary AX: WebKit does not expose max/min value of <progress> element
chris fleizach
Reported 2015-09-02 00:50:08 PDT
WebKit does not expose max/min value of <progress> element <rdar://problem/22530600>
Attachments
patch (4.50 KB, patch)
2015-09-02 00:55 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2015-09-02 00:55:49 PDT
WebKit Commit Bot
Comment 2 2015-09-02 13:03:41 PDT
Comment on attachment 260418 [details] patch Clearing flags on attachment: 260418 Committed r189258: <http://trac.webkit.org/changeset/189258>
WebKit Commit Bot
Comment 3 2015-09-02 13:03:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.