AX: WebKit does not expose max/min value of <progress> element https://bugs.webkit.org/show_bug.cgi?id=148707

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Allow native progress indicator elements to report min/max values by rewriting special
case code for ARIA progress bars.

Test: accessibility/mac/progress-element-min-max.html

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

LayoutTests:

* accessibility/mac/progress-element-min-max-expected.txt: Added.
* accessibility/mac/progress-element-min-max.html: Added.


Canonical link: https://commits.webkit.org/166836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189258 268f45cc-cd09-0410-ab3c-d52691b4dbfc